update with UrlMapping.mapPath option

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,5 +20,9 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    Symfony\UX\LiveComponent\Metadata\LiveComponentMetadataFactory:
+        alias: "ux.live_component.metadata_factory"
+
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
